fix(admin): criação da rota de ADM para a criação de permissões de usuários
